added pixel perfect

--- a/html5css3/css/main.css
+++ b/html5css3/css/main.css
@@ -1,4 +1,11 @@
 @import url(variables.css);
+/* CSS Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* Typography */
 
 h5 {
