updated styles & pixel perfect attempt

--- a/html5css3/css/tablet.css
+++ b/html5css3/css/tablet.css
@@ -1,7 +1,7 @@
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  padding: 30px;
+section select{
+  width: 180px;
+}
+
+.subscribe input{
+  width: 140px
 }
