--- a/html5css3/css/main.css
+++ b/html5css3/css/main.css
@@ -1,10 +1,6 @@
 @import url(variables.css);
 /* CSS Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
 
 /* Typography */
 
@@ -43,13 +39,14 @@ hr {
 section {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.322);
   align-items: center;
-  padding: 20px;
   text-align: left;
   font-family: "Roboto", sans-serif;
   color: #2c4d4d;
   margin-bottom: 2rem;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .container{
